--- a/global-configs/tmux/.tmux.conf
+++ b/global-configs/tmux/.tmux.conf
@@ -11,9 +11,24 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+# REMAP RESIZE
+# Unbind resize pane keys
+# unbind-key C-Left
+# unbind-key C-Right
+# unbind-key C-Up
+# unbind-key C-Down
+
+# Bind resize pane keys to ,, ., -, and =
+bind-key -r '=' resize-pane -U 5
+bind-key -r '-' resize-pane -D 5
+bind-key -r '.' resize-pane -L 10
+bind-key -r ',' resize-pane -R 10
+
+bind-key 'v' split-window -h
+bind-key 's' split-window -v
+
 # Set 256 colors
 # set -s default-terminal 'tmux-256color'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
