--- a/global-configs/polybar/config.ini
+++ b/global-configs/polybar/config.ini
@@ -58,7 +58,8 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date battery
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date battery
+; modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date battery
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -172,13 +173,20 @@ inherit = network-base
 interface-type = wired
 label-connected = %{F#ff3b21}%ifname%%{F-} %local_ip%
 
+; [module/date]
+; type = internal/date
+; interval = 1
+;
+; date = %H:%M
+; date-alt = %Y-%m-%d %H:%M:%S
+;
+; label = %date%
+; label-foreground = ${colors.foreground}
+
 [module/date]
 type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
+interval = 60
+date = " %a, %b %d, %H:%M"
 label = %date%
 label-foreground = ${colors.foreground}
 
