--- a/global-configs/tmux/.tmux.conf
+++ b/global-configs/tmux/.tmux.conf
@@ -12,23 +12,33 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # REMAP RESIZE
-# Unbind resize pane keys
-# unbind-key C-Left
-# unbind-key C-Right
-# unbind-key C-Up
-# unbind-key C-Down
-
-# Bind resize pane keys to ,, ., -, and =
 bind-key -r '=' resize-pane -U 5
 bind-key -r '-' resize-pane -D 5
 bind-key -r '.' resize-pane -L 10
 bind-key -r ',' resize-pane -R 10
 
-bind-key 'v' split-window -h
-bind-key 's' split-window -v
+# Pane splitting with path inheritance
+bind v split-window -h -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
-# Set 256 colors
-# set -s default-terminal 'tmux-256color'
+# Easy navigation between panes (Vim style)
+bind -n C-h select-pane -L
+bind -n C-j select-pane -D
+bind -n C-k select-pane -U
+bind -n C-l select-pane -R
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Enable 256 colors
+set -g default-terminal 'tmux-256color'
+
+# Mouse support
+set -g mouse on
+
+# Status bar customization
+set -g status-bg colour238
+set -g status-fg white
+set -g status-style bold
+set -g status-interval 10
+set -g status-right "%a %Y-%m-%d %H:%M"
+
+# Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
