--- a/global-configs/alacritty/dark.toml
+++ b/global-configs/alacritty/dark.toml
@@ -1,12 +1,13 @@
 
 [colors]
 # primary = { background = "#000e1c" }
+# primary = { background = "#28283c" }
 primary = { background = "#000000" }
 
 [window]
 padding = { x = 5, y = 0 }
 dynamic_padding = true
-opacity = 0.8
+opacity = 0.825
 
 [font]
 size = 9.5
