--- a/global-configs/alacritty/alacritty.toml
+++ b/global-configs/alacritty/alacritty.toml
@@ -5,8 +5,9 @@
 [window]
 padding = { x = 5, y = 0 }
 dynamic_padding = true
-opacity = 0.75
-# decorations = "None"
+# opacity = 0.75
+opacity = 0.8
+decorations = "None"
 
 
 [font]
